# NDKPractice

./: 53.OpenCV-Bitmap全面解析.md  ndk调试.md  settings.gradle
cpp20/: build.gradle
cpp20/src/main/: AndroidManifest.xml
cpp20/src/main/cpp/: ArrayList.hpp  CMakeLists.txt  native-lib.cpp
cpp21/: build.gradle
cpp21/src/main/: AndroidManifest.xml
cpp21/src/main/cpp/: native-lib.cpp
datastructure27/: build.gradle
datastructure27/src/main/: AndroidManifest.xml
datastructure27/src/main/cpp/: LinkedList.hpp  native-lib.cpp
datastructure28bubbkeselectsort/: build.gradle
datastructure28bubbkeselectsort/src/main/: AndroidManifest.xml
datastructure28bubbkeselectsort/src/main/cpp/: ArrayUtil.cpp  native-lib.cpp
datastructure28bubbleselectsort/: 28.数据结构和算法-冒泡、选择、插入排序.md  29.数据结构和算法-ndk调试、冒泡优化、插入和希尔排序.md  30.数据结构和算法-归并排序和快速排序.md  build.gradle
datastructure28bubbleselectsort/src/main/: AndroidManifest.xml
datastructure28bubbleselectsort/src/main/cpp/: ArrayUtil.cpp  native-lib.cpp
datastructure31recursionandstack/: build.gradle
datastructure31recursionandstack/src/main/: AndroidManifest.xml
datastructure31recursionandstack/src/main/cpp/: CMakeLists.txt
datastructure32queue/: 32.数据结构和算法-汉诺塔、队列和双向队列.md  build.gradle
datastructure32queue/src/main/: AndroidManifest.xml
datastructure32queue/src/main/cpp/: ArrayQueue.hpp  native-lib.cpp
datastructure35binarytree/: 35.数据结构和算法-二叉树常见操作、平衡二叉树.md  build.gradle
datastructure35binarytree/src/main/: AndroidManifest.xml
datastructure35binarytree/src/main/cpp/: native-lib.cpp
datastructure36heapsorting/: 36.数据结构和算法-二叉树序列化、优先级队列和堆排序.md  build.gradle
datastructure36heapsorting/src/main/: AndroidManifest.xml
datastructure36heapsorting/src/main/cpp/: PriorityQueue.hpp  native-lib.cpp
datastructure37binarysearchtree/: build.gradle
datastructure37binarysearchtree/src/main/: AndroidManifest.xml
datastructure37binarysearchtree/src/main/cpp/: native-lib.cpp
datastructure38avl/: 38.数据结构和算法-AVL树.md  build.gradle
datastructure38avl/src/main/: AndroidManifest.xml
datastructure38avl/src/main/cpp/: AVL.hpp  native-lib.cpp
datastructure40redblacktree/: 40.数据结构和算法-红黑树.md  40、 41. 数据结构和算法-红黑树.md  42. 数据结构和算法-哈夫曼编码.md  build.gradle
datastructure40redblacktree/src/main/: AndroidManifest.xml
datastructure40redblacktree/src/main/cpp/: map.hpp  native-lib.cpp
datastructure42huffman/: build.gradle
datastructure42huffman/src/main/: AndroidManifest.xml
datastructure42huffman/src/main/cpp/: CMakeLists.txt
datastructure43graph/: 43. 数据结构和算法-图.md  build.gradle
datastructure43graph/src/main/: AndroidManifest.xml
datastructure43graph/src/main/cpp/: native-lib.cpp
ffmpeg83/: 83.FFmpeg-音乐播放器1.md  build.gradle
ffmpeg83/src/main/: AndroidManifest.xml
ffmpeg83/src/main/cpp/: AVPacketQueue.h  Audio.cpp  Audio.h  CMakeLists.txt  DZAudio.cpp  DZAudio.h  DZFFmpeg.cpp  DZFFmpeg.h  DZPlayStatus.cpp  DZPlayStatus.h  FFmpeg.cpp  FFmpeg.h  JNICall.cpp  JNICall.h  JNIPlayerCall.cpp  JNIPlayerCall.h  PacketQueue.cpp  PlayerStatus.cpp  PlayerStatus.h  android_log.h  music-player.cpp  native-lib.cpp
ffmpeg86/: 87.FFmpeg-视频播放器2.md  build.gradle
ffmpeg86/src/main/: AndroidManifest.xml
ffmpeg86/src/main/cpp/: Audio.cpp  Audio.h  CMakeLists.txt  ConstDefine.h  FFmpeg.cpp  FFmpeg.h  JNICall.cpp  Media.cpp  Media.h  PacketQueue.cpp  PacketQueue.h  Video.cpp  Video.h  video-player.cpp
ffmpeg88livepush/: 88.FFmpeg-直播推、拉流.md  build.gradle
ffmpeg88livepush/src/main/: AndroidManifest.xml
ffmpeg88livepush/src/main/cpp/: CMakeLists.txt  ConstDefine.h  JNICall.cpp  JNICall.h  LivePush.cpp  LivePush.h  PacketQueue.cpp  PacketQueue.h  native-lib.cpp
ffmpegmusic/: build.gradle
ffmpegmusic/src/main/: AndroidManifest.xml
ffmpegmusic/src/main/cpp/: AVPacketQueue.cpp  AVPacketQueue.h  CMakeLists.txt  DZAudio.cpp  DZAudio.h  DZConstDefine.h  DZFFmpeg.cpp  DZFFmpeg.h  DZPlayStatus.cpp  DZPlayStatus.h  JNIPlayerCall.cpp  JNIPlayerCall.h  android_log.h  native-lib.cpp
ffmpegvideo/: build.gradle
ffmpegvideo/src/main/: AndroidManifest.xml
ffmpegvideo/src/main/cpp/: AVPacketQueue.cpp  DZAudio.cpp  DZAudio.h  DZConstDefine.h  DZFFmpeg.cpp  DZFFmpeg.h  DZMedia.cpp  DZMedia.h  DZPlayStatus.h  DZVideo.cpp  DZVideo.h  JNIPlayerCall.cpp  JNIPlayerCall.h  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
jni09/: 09.JNI基础-Android共享内存的序列化过程.md  build.gradle
jni09/src/main/: AndroidManifest.xml
jni09/src/main/cpp/: com_east_jni09_Parcel.h  native-lib.cpp
ndk01md5/: 1.ndk01_md5加密.md  build.gradle
ndk01md5/src/main/: AndroidManifest.xml
ndk01md5/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ndk02ffmpegvideocompress/: build.gradle  build_android_clang.sh  ffmpeg编译成so库.md  ffmpeg视频专门压缩.md  test1.sh  test2.sh  test3.sh
ndk02ffmpegvideocompress/src/main/: AndroidManifest.xml
ndk02ffmpegvideocompress/src/main/cpp/: CMakeLists.txt  cmdutils.c  cmdutils.h  ffmpeg_filter.c  ffmpeg_lib.c  ffmpeg_mod.c  ffmpeg_opt.c  native-lib.cpp
ndk02ffmpegvideocompress/src/main/cpp/ffmpeg/: ffmpeg.c  network.c  real-native-lib.cpp
ndk02ffmpegvideocompress/src/main/cpp/ffmpeg/other/: ffmpeg.h
ndk03opencvfacedetection/: build.gradle  opencv人脸识别.md
ndk03opencvfacedetection/src/main/: AndroidManifest.xml
ndk31opencvbankocr/: build.gradle  opencv银行卡号识别.md
ndk31opencvbankocr/src/main/: AndroidManifest.xml
ndk31opencvbankocr/src/main/cpp/: BitmapMatUtils.cpp  (+5 more)
opencv49androidfiltereffects/: build.gradle
opencv49androidfiltereffects/src/main/: AndroidManifest.xml
opencv62/: 62.OpenCV-手写QQ说说图片效果.md  build.gradle
opencv62/src/main/: AndroidManifest.xml
opencv62/src/main/cpp/: CMakeLists.txt  native-lib.cpp
opencv63/: build.gradle
opencv63/src/main/: AndroidManifest.xml
opencv64/: build.gradle
opencv64/src/main/: AndroidManifest.xml
opencv69/: 69.OpenCV-人脸识别 - HOG 和 LBP 特征检测.md  build.gradle
opencv69/src/main/: AndroidManifest.xml
opencv70/: build.gradle
opencv70/src/main/: AndroidManifest.xml
opencv71/: build.gradle
opencv71/src/main/: AndroidManifest.xml
opencv71/src/main/cpp/: CMakeLists.txt  native-lib.cpp
(+258 files in other folders)
